--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img src="qa.jpg" alt="Avatar" class="avatar">
+            <img src="hinxinh.jpg" alt="Avatar" class="avatar">
             <div class="password-section" id="passwordSection">
                 <h1>NHẬP PASS ĐI NGƯỜI ĐẸP</h1>
                 <input type="text" id="password" placeholder="Enter password" readonly>
@@ -473,7 +473,7 @@
     </div>
     <script>
         let password = "";
-        const correctPassword = "191008";
+        const correctPassword = "190308";
         const passwordInput = document.getElementById("password");
         const passwordSection = document.getElementById("passwordSection");
         const tiktokSection = document.getElementById("tiktokSection");
