--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -240,13 +240,13 @@
         <div class="envelope-flap"></div>
         <div class="letter">
             <h1>Lá Thư Tâm Tình</h1>
-            <p>Thân gửi Nguyễn Vũ Quỳnh Anh,</p>
+            <p>Thân gửi Hin xinh gái,</p>
             <p>Tôi viết thư này để bày tỏ tình cảm chân thành của mình.</p>
             <p>Bạn là ánh sáng trong cuộc đời tôi, luôn làm tôi mỉm cười.</p>
             <p>Mỗi khoảnh khắc bên bạn đều là kỷ niệm quý giá tôi trân trọng.</p>
             <p>Dù có khó khăn, tôi sẽ luôn ở đây, cùng bạn vượt qua tất cả.</p>
             <p>Love You!</p>
-            <p class="signature">Với tất cả tình yêu,<br>[Ba]</p>
+            <p class="signature">Với tất cả tình yêu,<br>thao</p>
             <p class="heart-symbol">❤️</p>
         </div>
     </div>
